traces/bug_906.txt
src/fflib/problem.cpp:5424: error: DEAD_STORE
  The value written to &arean (type double) is never used.
Showing all 1 steps of the trace


src/fflib/problem.cpp:5424:25: Write of unused value
5422.                           else {double y=f[i0]/(f[i0]-f[i1]) ; c = 1.- (1.-c)*y*y; };
5423.                           assert( c > 0 && c < 1);
5424.                           double arean = (1-c)*Th[t].area;
                                ^
5425.                           FITM=FIT;
5426.                           FITM*=1-c;
